--- a/outlook-calendar.html
+++ b/outlook-calendar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Outlook Calendar</title>
+  <title>Calendar</title>
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -768,4 +768,5 @@
     ReactDOM.render(<OutlookCalendar />, document.getElementById('root'));
   </script>
 </body>
+
 </html>
