--- a/outlook-calendar.html
+++ b/outlook-calendar.html
@@ -460,7 +460,7 @@
               <ArrowLeft />
             </button>
             <Calendar />
-            <h1 className="text-xl font-bold">Outlook Calendar</h1>
+            <h1 className="text-xl font-bold">Calendar</h1>
             <div className="flex-1"></div>
             <div className="flex items-center gap-2">
               <input
@@ -770,3 +770,4 @@
 </body>
 
 </html>
+
