--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
     .progress-compact {
       display: flex;
       align-items: center;
-      gap: 10px;
+      gap: 12px;
       padding: 8px 15px;
       background: rgba(79, 70, 229, 0.05);
       border-radius: 8px;
@@ -127,50 +127,76 @@
       position: relative;
       flex: 1;
       min-width: 150px;
+      height: 6px;
+      display: flex;
+      align-items: center;
     }
 
     .progress-slider-compact {
       width: 100%;
       height: 6px;
       border-radius: 5px;
-      background: #e5e7eb;
+      background: transparent;
       outline: none;
       -webkit-appearance: none;
       appearance: none;
       cursor: pointer;
+      position: relative;
+      z-index: 2;
+      margin: 0;
+      padding: 0;
+    }
+
+    .progress-slider-compact::-webkit-slider-runnable-track {
+      width: 100%;
+      height: 6px;
+      background: transparent;
+      border-radius: 5px;
+    }
+
+    .progress-slider-compact::-moz-range-track {
+      width: 100%;
+      height: 6px;
+      background: transparent;
+      border-radius: 5px;
+      border: none;
     }
 
     .progress-slider-compact::-webkit-slider-thumb {
       -webkit-appearance: none;
       appearance: none;
-      width: 16px;
-      height: 16px;
+      width: 14px;
+      height: 14px;
       border-radius: 50%;
       background: #4f46e5;
       cursor: pointer;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.3);
       transition: all 0.2s;
+      margin-top: -4px;
+      position: relative;
     }
 
     .progress-slider-compact::-webkit-slider-thumb:hover {
       background: #4338ca;
       transform: scale(1.15);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.4);
     }
 
     .progress-slider-compact::-moz-range-thumb {
-      width: 16px;
-      height: 16px;
+      width: 14px;
+      height: 14px;
       border-radius: 50%;
       background: #4f46e5;
       cursor: pointer;
       border: none;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.3);
       transition: all 0.2s;
     }
 
     .progress-slider-compact::-moz-range-thumb:hover {
       background: #4338ca;
       transform: scale(1.15);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.4);
     }
 
     .progress-bar-compact {
@@ -182,6 +208,18 @@
       background: linear-gradient(90deg, #4f46e5, #6d28d9);
       pointer-events: none;
       transition: width 0.3s ease;
+      z-index: 1;
+    }
+
+    .progress-track-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 6px;
+      border-radius: 5px;
+      background: #e5e7eb;
+      z-index: 0;
     }
 
     .progress-status-compact {
@@ -635,6 +673,7 @@
           <h3>${p.name}</h3>
           <div class="progress-compact">
             <div class="progress-slider-container-compact">
+              <div class="progress-track-bg"></div>
               <div class="progress-bar-compact" style="width: ${progress}%"></div>
               <input type="range" class="progress-slider-compact" min="0" max="100" value="${progress}" data-project-id="${p.id}" />
             </div>
