--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
             <div class="error-message" id="loginPasswordError">Password must be at least 6 characters</div>
           </div>
 
-          <button type="submit" class="submit-btn">Sign In</button>
+          <button type="submit" class="submit-btn">Log In</button>
         </form>
       </div>
 
@@ -683,4 +683,5 @@
   </script>
 </body>
 </html>
+
 
