--- a/aboutus.html
+++ b/aboutus.html
@@ -290,28 +290,21 @@
             <h2>Our Team</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <div class="avatar">FM</div>
-                    <h3>Dr. Faculty Name</h3>
+                    <div class="avatar">NG</div>
+                    <h3>Dr. Nishant Gupta</h3>
                     <div class="role">Faculty Mentor</div>
-                    <div class="email">faculty@iimiit.ac.in</div>
+                    <div class="email">nishant.gupta@lnmiit.ac.in</div>
+                </div>
+               
+                <div class="team-member">
+                    <div class="avatar">HV</div>
+                    <h3>Himi Vyas</h3>
+                    <div class="email">23uec550@lnmiit.ac.in</div>
                 </div>
                 <div class="team-member">
-                    <div class="avatar">23</div>
-                    <h3>Your Name</h3>
-                    <div class="role">Team Lead & Developer</div>
-                    <div class="email">23ume514@iimiit.ac.in</div>
-                </div>
-                <div class="team-member">
-                    <div class="avatar">T1</div>
-                    <h3>Teammate 1</h3>
-                    <div class="role">Developer</div>
-                    <div class="email">teammate1@iimiit.ac.in</div>
-                </div>
-                <div class="team-member">
-                    <div class="avatar">T2</div>
-                    <h3>Teammate 2</h3>
-                    <div class="role">Developer</div>
-                    <div class="email">teammate2@iimiit.ac.in</div>
+                    <div class="avatar">AJ</div>
+                    <h3>Archi Jain</h3>
+                    <div class="email">23ume514@lnmiit.ac.in</div>
                 </div>
             </div>
         </div>
