--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,8 @@
       background: rgba(79, 70, 229, 0.05);
       border-radius: 8px;
       border-left: 3px solid #4f46e5;
-      min-width: 300px;
+      flex: 1;
+      max-width: 600px;
     }
 
     .progress-percentage-compact {
@@ -138,7 +139,7 @@
     .progress-slider-container-compact {
       position: relative;
       flex: 1;
-      min-width: 150px;
+      min-width: 250px;
       height: 6px;
       display: flex;
       align-items: center;
@@ -324,8 +325,8 @@
 
     .colleagues p {
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      gap: 10px;
       margin: 5px 0;
       font-size: 1.2rem;
       color: #444;
@@ -336,6 +337,10 @@
 
     .colleagues p:hover {
       background: rgba(79, 70, 229, 0.1);
+    }
+
+    .colleagues p strong {
+      margin-right: 0;
     }
 
     .email-icon {
@@ -795,15 +800,13 @@
             let colleaguesHtml = colleagues.map(c => `
               <p>
                 <strong>${c.name}</strong>
-                <div class="colleague-actions">
-                  <a href="https://mail.google.com/mail/?view=cm&fs=1&to=${encodeURIComponent(c.email)}" target="_blank" title="Send email to ${c.name}">
-                    <img src="https://www.gstatic.com/images/icons/material/product/2x/gmail_48dp.png"
-                         alt="Gmail" class="email-icon">
-                  </a>
-                  <button class="timeline-btn colleague-timeline-btn" data-email="${c.email}" data-name="${c.name}">
-                    📅 Meetings
-                  </button>
-                </div>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=${encodeURIComponent(c.email)}" target="_blank" title="Send email to ${c.name}">
+                  <img src="https://www.gstatic.com/images/icons/material/product/2x/gmail_48dp.png"
+                       alt="Gmail" class="email-icon">
+                </a>
+                <button class="timeline-btn colleague-timeline-btn" data-email="${c.email}" data-name="${c.name}">
+                  📅 Meetings
+                </button>
               </p>
             `).join('');
             colDiv.innerHTML = headerHtml + colleaguesHtml;
