--- a/description.html
+++ b/description.html
@@ -96,14 +96,20 @@
       color: #4f46e5;
       border: 2px solid #4f46e5;
       text-decoration: none;
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
+      display: inline-block;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-weight: 600;
+      font-size: 0.95rem;
+      transition: all 0.2s;
+      box-shadow: 0 2px 4px rgba(79, 70, 229, 0.1);
     }
     .back-btn:hover {
-      background: #f8fafc;
-      border-color: #4338ca;
-      color: #4338ca;
+      background: #4f46e5;
+      border-color: #4f46e5;
+      color: #fff;
+      transform: translateY(-1px);
+      box-shadow: 0 4px 8px rgba(79, 70, 229, 0.3);
     }
     .loading {
       text-align: center;
@@ -678,7 +684,12 @@
         try {
           const description = await apiCall(`/projects/${projectId}/description`);
           
-          if (description && Object.keys(description).length > 0) {
+          // Check if description has actual data (not just empty object)
+          const hasData = description && Object.keys(description).some(key => 
+            description[key] && description[key].toString().trim() !== ''
+          );
+          
+          if (hasData) {
             descriptionData = description;
             fields.forEach(field => {
               const element = document.getElementById(field);
@@ -695,6 +706,7 @@
           }
         } catch (error) {
           // If no description exists yet, show form
+          console.log('No description found, showing form');
           switchToFormMode();
         }
 
