--- a/description.html
+++ b/description.html
@@ -97,16 +97,15 @@
       border: 2px solid #4f46e5;
       text-decoration: none;
       display: inline-block;
-      padding: 10px 20px;
+      padding: 12px 24px;
       border-radius: 8px;
       font-weight: 600;
-      font-size: 0.95rem;
+      font-size: 1rem;
       transition: all 0.2s;
       box-shadow: 0 2px 4px rgba(79, 70, 229, 0.1);
     }
     .back-btn:hover {
       background: #4f46e5;
-      border-color: #4f46e5;
       color: #fff;
       transform: translateY(-1px);
       box-shadow: 0 4px 8px rgba(79, 70, 229, 0.3);
@@ -246,10 +245,7 @@
   <div class="container">
     <div class="nav-header">
       <h1 id="projTitle">Project Description</h1>
-      <a href="projects.html" class="back-btn">
-        <span>←</span>
-        <span>Back to Projects</span>
-      </a>
+      <a href="projects.html" class="back-btn">← Back to Projects</a>
     </div>
 
     <div id="loadingMessage" class="loading" style="display: none;">
@@ -468,10 +464,7 @@
       <input id="approvalSignature" type="text" placeholder="Type name for digital signature">
 
       <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #e5e7eb;">
-        <a href="projects.html" class="back-btn" style="margin-right: 10px;">
-          <span>←</span>
-          <span>Back to Projects</span>
-        </a>
+        <a href="projects.html" class="back-btn" style="margin-right: 10px;">← Back to Projects</a>
         <button type="submit" id="saveBtn">Save Description</button>
       </div>
     </form>
@@ -685,9 +678,10 @@
           const description = await apiCall(`/projects/${projectId}/description`);
           
           // Check if description has actual data (not just empty object)
-          const hasData = description && Object.keys(description).some(key => 
-            description[key] && description[key].toString().trim() !== ''
-          );
+          const hasData = description && Object.keys(description).length > 0 && 
+            Object.keys(description).some(key => 
+              description[key] && String(description[key]).trim() !== ''
+            );
           
           if (hasData) {
             descriptionData = description;
