--- a/career.html
+++ b/career.html
@@ -277,8 +277,11 @@
       color: #4b5563;
       line-height: 1.6;
       margin-bottom: 15px;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+      white-space: pre-wrap;
     }
-
+    
     .progress-section {
       margin-top: 15px;
     }
@@ -1028,4 +1031,5 @@ document.getElementById('targetDateInput').value = goal.target_date || '';
   </script>
 </body>
 </html>
+
 
