--- a/career.html
+++ b/career.html
@@ -273,12 +273,13 @@
       color: #374151;
     }
 
-    .goal-description {
+   .goal-description {
       color: #4b5563;
       line-height: 1.6;
       margin-bottom: 15px;
       word-wrap: break-word;
       overflow-wrap: break-word;
+      word-break: break-all;
       white-space: pre-wrap;
     }
     
@@ -1031,5 +1032,6 @@ document.getElementById('targetDateInput').value = goal.target_date || '';
   </script>
 </body>
 </html>
+
 
 
