--- a/description.html
+++ b/description.html
@@ -479,7 +479,7 @@
           <div class="section-title">Contact Information</div>
           <div class="info-grid">
             <div class="info-card">
-              <h3>Client/Colleague Contact</h3>
+              <h3>Client Contact</h3>
               <div class="info-item">
                 <span class="info-label">Name & Title</span>
                 <span class="info-value">${data.colleagueName || '<span class="empty-value">Not provided</span>'}</span>
@@ -944,4 +944,5 @@
   </script>
 </body>
 </html>
+
 
