--- a/description.html
+++ b/description.html
@@ -676,7 +676,7 @@
           <div class="section-title">Contact Information</div>
           <div class="info-grid">
             <div class="info-card">
-              <h3>Client/Colleague Contact</h3>
+              <h3>Client Contact</h3>
               <div class="info-item">
                 <span class="info-label">Name & Title</span>
                 <input type="text" id="edit-colleagueName" value="${data.colleagueName || ''}" placeholder="Full name and title">
@@ -944,5 +944,6 @@
   </script>
 </body>
 </html>
+
 
 
