--- a/future.html
+++ b/future.html
@@ -355,7 +355,10 @@
       font-size: 1rem;
       line-height: 1.6;
       white-space: pre-wrap;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
     }
+
 
     .view-field-value.empty {
       color: var(--muted);
@@ -884,4 +887,5 @@
   </script>
 </body>
 </html>
+
 
