--- a/profile.html
+++ b/profile.html
@@ -65,8 +65,14 @@
       font-size: 0.85rem;
       font-weight: 600;
       transition: all 0.3s;
+      opacity: 0;
+      visibility: hidden;
     }
 
+    .autosave-status.visible {
+      opacity: 1;
+      visibility: visible;
+    }
     .autosave-status.saving {
       background: rgba(245, 158, 11, 0.1);
       color: var(--warning);
@@ -840,3 +846,4 @@
   </script>
 </body>
 </html>
+
