--- a/deadlines.html
+++ b/deadlines.html
@@ -303,7 +303,11 @@
       color: #4b5563;
       line-height: 1.6;
       margin-top: 10px;
+      word-wrap: break-word;
+      word-break: break-word;
+      overflow-wrap: break-word;
     }
+
 
 
     .days-left {
@@ -828,6 +832,7 @@
   </script>
 </body>
 </html>
+
 
 
 
