--- a/notes.html
+++ b/notes.html
@@ -331,6 +331,8 @@
       word-wrap: break-word;
       overflow-wrap: break-word;
       white-space: pre-wrap;
+      max-width: 100%;
+      overflow-x: hidden;
     }
 
     .modal {
@@ -1462,3 +1464,4 @@
   </script>
 </body>
 </html>
+
