--- a/dashboard.html
+++ b/dashboard.html
@@ -5,12 +5,12 @@
   <title>Dashboard</title>
   <style>
     :root{
-      --accent:#3b82f6;
-      --accent-2:#2563eb;
-      --bg:#f0f9ff;
+      --accent:#9FB3DF;
+      --accent-2:#9EC6F3;
+      --bg:#FFF1D5;
       --card:#ffffff;
       --muted:#64748b;
-      --event-bg: rgba(59,130,246,0.12);
+      --event-bg: rgba(159,179,223,0.12);
     }
    
     body {
@@ -23,7 +23,7 @@
    
     .sidebar {
       width: 220px;
-      background: linear-gradient(180deg, #3b82f6, #2563eb);
+      background: linear-gradient(180deg, #9FB3DF, #9EC6F3);
       color: white;
       padding: 20px 15px;
       display: flex;
@@ -105,7 +105,7 @@
       padding: 12px 16px;
       background: rgba(255,255,255,0.8);
       border-radius: 8px;
-      border: 1px solid rgba(59,130,246,0.1);
+      border: 1px solid rgba(159,179,223,0.2);
     }
 
     .user-email {
@@ -127,7 +127,7 @@
       box-shadow: 0 4px 20px rgba(0,0,0,0.08);
       cursor: pointer;
       transition: transform 0.3s, box-shadow 0.3s;
-      border: 1px solid rgba(59,130,246,0.1);
+      border: 1px solid rgba(159,179,223,0.15);
       position: relative;
       overflow: hidden;
       min-height: 220px;
@@ -169,7 +169,7 @@
     }
 
     .tile-item {
-      background: rgba(59,130,246,0.05);
+      background: rgba(189,221,228,0.15);
       padding: 10px 12px;
       border-radius: 8px;
       margin-bottom: 8px;
@@ -198,12 +198,12 @@
     }
 
     /* Tile-specific colors */
-    .deadlines .tile-icon { background: linear-gradient(135deg, #3b82f6, #2563eb); }
-    .ideas .tile-icon { background: linear-gradient(135deg, #60a5fa, #3b82f6); }
-    .projects .tile-icon { background: linear-gradient(135deg, #2563eb, #1d4ed8); }
-    .notes .tile-icon { background: linear-gradient(135deg, #93c5fd, #60a5fa); }
-    .career .tile-icon { background: linear-gradient(135deg, #1e40af, #1e3a8a); }
-    .future .tile-icon { background: linear-gradient(135deg, #0ea5e9, #0284c7); }
+    .deadlines .tile-icon { background: linear-gradient(135deg, #9FB3DF, #9EC6F3); }
+    .ideas .tile-icon { background: linear-gradient(135deg, #9EC6F3, #BDDDE4); }
+    .projects .tile-icon { background: linear-gradient(135deg, #9FB3DF, #BDDDE4); }
+    .notes .tile-icon { background: linear-gradient(135deg, #BDDDE4, #9EC6F3); }
+    .career .tile-icon { background: linear-gradient(135deg, #9FB3DF, #8BA3CF); }
+    .future .tile-icon { background: linear-gradient(135deg, #9EC6F3, #8EB6E3); }
 
     .empty-state {
       text-align: center;
