--- a/dashboard.html
+++ b/dashboard.html
@@ -132,7 +132,7 @@
 
     .top-bar {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start;
       align-items: center;
       margin-bottom: 32px;
     }
@@ -144,78 +144,6 @@
       display: flex;
       align-items: center;
       gap: 8px;
-    }
-
-    .user-profile {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-    }
-
-    .notification-icon {
-      position: relative;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background: var(--card);
-      border: 1px solid var(--border);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      transition: all 0.2s;
-    }
-
-    .notification-icon:hover {
-      background: #f8fafc;
-    }
-
-    .notification-badge {
-      position: absolute;
-      top: -2px;
-      right: -2px;
-      width: 8px;
-      height: 8px;
-      background: #ef4444;
-      border-radius: 50%;
-      border: 2px solid white;
-    }
-
-    .user-avatar {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      cursor: pointer;
-    }
-
-    .avatar {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background: linear-gradient(135deg, #6366f1, #8b5cf6);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-weight: 600;
-      font-size: 0.875rem;
-    }
-
-    .user-details {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
-    .user-name {
-      font-weight: 600;
-      font-size: 0.875rem;
-      color: var(--text-primary);
-    }
-
-    .user-role {
-      font-size: 0.75rem;
-      color: var(--text-secondary);
     }
 
     .dashboard-header {
@@ -260,7 +188,7 @@
 
     .tile-header {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start;
       align-items: flex-start;
       margin-bottom: 20px;
     }
@@ -295,18 +223,7 @@
     }
 
     .tile-action-icon {
-      width: 40px;
-      height: 40px;
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      transition: all 0.2s;
-    }
-
-    .dashboard-tile:hover .tile-action-icon {
-      transform: scale(1.1);
+      display: none;
     }
 
     .tile-content {
@@ -510,19 +427,6 @@
       <div class="welcome-text">
         Welcome back, <span id="userEmail" style="color: var(--text-secondary); font-weight: 400;">Loading...</span>
       </div>
-      <div class="user-profile">
-        <div class="notification-icon">
-          🔔
-          <div class="notification-badge"></div>
-        </div>
-        <div class="user-avatar">
-          <div class="avatar" id="userAvatar">MR</div>
-          <div class="user-details">
-            <div class="user-name" id="userName">Maria Rodriguez</div>
-            <div class="user-role">UX Designer</div>
-          </div>
-        </div>
-      </div>
     </div>
 
     <div id="dashboardView">
@@ -539,7 +443,6 @@
               <h3 class="tile-title">Your Projects</h3>
               <p class="tile-description">Manage all your projects in one centralized hub. Track members, view details, and monitor progress.</p>
             </div>
-            <div class="tile-action-icon">🚀</div>
           </div>
           <div class="tile-content" id="projects-content">
             <div class="loading">Loading projects...</div>
@@ -557,7 +460,6 @@
               <h3 class="tile-title">Recent Ideas</h3>
               <p class="tile-description">Capture and organize your brilliant ideas. Never lose a creative thought again.</p>
             </div>
-            <div class="tile-action-icon">💡</div>
           </div>
           <div class="tile-content" id="ideas-content">
             <div class="loading">Loading ideas...</div>
@@ -575,7 +477,6 @@
               <h3 class="tile-title">Quick Notes</h3>
               <p class="tile-description">Take quick notes on the fly and access them instantly whenever you need them.</p>
             </div>
-            <div class="tile-action-icon">✏️</div>
           </div>
           <div class="tile-content" id="notes-content">
             <div class="loading">Loading notes...</div>
@@ -593,7 +494,6 @@
               <h3 class="tile-title">Deadlines</h3>
               <p class="tile-description">Stay on top of all your deadlines with smart notifications and visual tracking.</p>
             </div>
-            <div class="tile-action-icon">🔔</div>
           </div>
           <div class="tile-content" id="deadlines-content">
             <div class="loading">Loading deadlines...</div>
@@ -611,7 +511,6 @@
               <h3 class="tile-title">Future Work</h3>
               <p class="tile-description">Plan and organize your future work ideas, upcoming tasks, and long-term projects.</p>
             </div>
-            <div class="tile-action-icon">🚀</div>
           </div>
           <div class="tile-content" id="future-content">
             <div class="loading">Loading future work...</div>
@@ -629,7 +528,6 @@
               <h3 class="tile-title">Career & Goals</h3>
               <p class="tile-description">Set, track, and achieve your career aspirations and personal goals.</p>
             </div>
-            <div class="tile-action-icon">🎯</div>
           </div>
           <div class="tile-content" id="career-content">
             <div class="loading">Loading goals...</div>
@@ -670,10 +568,8 @@
     redirectToLogin();
   }
 
-  // Display user email and initialize avatar
+  // Display user email
   document.getElementById('userEmail').textContent = userEmail;
-  const initials = userEmail.substring(0, 2).toUpperCase();
-  document.getElementById('userAvatar').textContent = initials;
 
   // ===================== API HELPERS =====================
   async function apiCall(endpoint, options = {}) {
