--- a/ideas.html
+++ b/ideas.html
@@ -5,14 +5,17 @@
   <title>Recent Ideas - Note Taking</title>
   <style>
     :root{
-      --accent:#4f46e5;
-      --accent-2:#6d28d9;
-      --bg:#f4f4ff;
+      --accent:#6366f1;
+      --accent-2:#4f46e5;
+      --bg:#f8f9fc;
       --card:#ffffff;
-      --muted:#6b7280;
+      --muted:#64748b;
+      --text-primary:#0f172a;
+      --text-secondary:#475569;
       --success:#10b981;
       --warning:#f59e0b;
       --danger:#ef4444;
+      --border:#e2e8f0;
     }
    
     * {
@@ -22,22 +25,23 @@
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Inter', sans-serif;
       background: var(--bg);
       min-height: 100vh;
+      color: var(--text-primary);
     }
 
     .container {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 30px 20px;
+      padding: 40px 20px;
     }
 
     .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 30px;
+      margin-bottom: 32px;
       flex-wrap: wrap;
       gap: 15px;
     }
@@ -55,58 +59,60 @@
     }
 
     .total-count {
-      background: white;
+      background: var(--card);
       padding: 10px 20px;
       border-radius: 8px;
-      border: 1px solid #e5e7eb;
-      font-size: 0.95rem;
-      color: var(--muted);
+      border: 1px solid var(--border);
+      font-size: 0.875rem;
+      color: var(--text-secondary);
       font-weight: 500;
     }
 
     .total-count .count-number {
       font-size: 1.5rem;
-      font-weight: bold;
+      font-weight: 600;
       color: var(--accent);
       margin-right: 5px;
     }
 
     .back-btn {
-      background: white;
-      border: 1px solid #e5e7eb;
+      background: var(--card);
+      border: 1px solid var(--border);
       padding: 10px 15px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       transition: all 0.2s;
       text-decoration: none;
-      color: #374151;
+      color: var(--text-primary);
       display: inline-flex;
       align-items: center;
       gap: 5px;
+      font-weight: 500;
     }
 
     .back-btn:hover {
-      background: #f9fafb;
-      border-color: #d1d5db;
+      background: #f1f5f9;
+      border-color: #cbd5e1;
     }
 
     h1 {
-      font-size: 2rem;
-      color: #1f2937;
+      font-size: 1.5rem;
+      color: var(--text-primary);
       display: flex;
       align-items: center;
       gap: 10px;
+      font-weight: 600;
     }
 
     .add-btn {
       background: linear-gradient(135deg, var(--accent), var(--accent-2));
       color: white;
       border: none;
-      padding: 12px 24px;
+      padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 1rem;
+      font-size: 0.875rem;
       font-weight: 600;
       transition: transform 0.2s, box-shadow 0.2s;
       display: flex;
@@ -116,7 +122,7 @@
 
     .add-btn:hover {
       transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(79, 70, 229, 0.3);
+      box-shadow: 0 12px 24px rgba(99, 102, 241, 0.2);
     }
 
     .stats-section {
@@ -132,29 +138,30 @@
     .stat-card {
       text-align: center;
       padding: 15px;
-      background: #f9fafb;
+      background: #f1f5f9;
       border-radius: 10px;
     }
 
     .stat-number {
       font-size: 2rem;
-      font-weight: bold;
+      font-weight: 600;
       color: var(--accent);
       margin: 0;
     }
 
     .stat-label {
-      font-size: 0.9rem;
-      color: var(--muted);
+      font-size: 0.875rem;
+      color: var(--text-secondary);
       margin: 4px 0 0 0;
     }
 
     .filter-section {
-      background: white;
+      background: var(--card);
       padding: 20px;
       border-radius: 12px;
       margin-bottom: 25px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+      border: 1px solid var(--border);
       display: flex;
       gap: 15px;
       flex-wrap: wrap;
@@ -165,9 +172,11 @@
       flex: 1;
       min-width: 250px;
       padding: 10px 16px;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       border-radius: 8px;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
+      background: var(--card);
+      color: var(--text-primary);
     }
 
     .search-box:focus {
@@ -182,40 +191,42 @@
     }
 
     .filter-group label {
-      font-size: 0.9rem;
-      color: var(--muted);
+      font-size: 0.875rem;
+      color: var(--text-secondary);
       font-weight: 500;
     }
 
     .filter-select {
       padding: 8px 12px;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       border-radius: 6px;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       cursor: pointer;
-      background: white;
+      background: var(--card);
+      color: var(--text-primary);
     }
 
     .ideas-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-      gap: 20px;
+      gap: 24px;
     }
 
     .idea-card {
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      border-left: 4px solid var(--accent);
+      background: var(--card);
+      border-radius: 16px;
+      padding: 24px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+      border: 1px solid var(--border);
       transition: transform 0.2s, box-shadow 0.2s;
       position: relative;
       cursor: pointer;
     }
 
     .idea-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+      transform: translateY(-4px);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.1);
+      border-color: rgba(99,102,241,0.2);
     }
 
     .idea-card-header {
@@ -227,9 +238,9 @@
     }
 
     .idea-title {
-      font-size: 1.2rem;
+      font-size: 1.125rem;
       font-weight: 600;
-      color: #1f2937;
+      color: var(--text-primary);
       flex: 1;
       word-wrap: break-word;
     }
@@ -239,7 +250,7 @@
       flex-wrap: wrap;
       gap: 10px;
       margin-bottom: 12px;
-      font-size: 0.85rem;
+      font-size: 0.813rem;
       align-items: center;
     }
 
@@ -247,13 +258,13 @@
       display: flex;
       align-items: center;
       gap: 5px;
-      color: var(--muted);
+      color: var(--text-secondary);
     }
 
     .category-badge {
       padding: 4px 10px;
       border-radius: 12px;
-      font-size: 0.8rem;
+      font-size: 0.75rem;
       font-weight: 600;
       color: white;
     }
@@ -266,7 +277,7 @@
     .category-creative { background: #ec4899; }
 
     .idea-content {
-      color: #4b5563;
+      color: var(--text-secondary);
       line-height: 1.6;
       margin-top: 10px;
       max-height: 100px;
@@ -275,11 +286,12 @@
       display: -webkit-box;
       -webkit-line-clamp: 4;
       -webkit-box-orient: vertical;
+      font-size: 0.875rem;
     }
 
     .word-count {
-      font-size: 0.85rem;
-      color: var(--muted);
+      font-size: 0.813rem;
+      color: var(--text-secondary);
       margin-top: 8px;
     }
 
@@ -301,7 +313,7 @@
     }
 
     .modal-content {
-      background: white;
+      background: var(--card);
       padding: 30px;
       border-radius: 16px;
       width: 90%;
@@ -318,8 +330,9 @@
     }
 
     .modal-header h2 {
-      font-size: 1.5rem;
-      color: #1f2937;
+      font-size: 1.25rem;
+      color: var(--text-primary);
+      font-weight: 600;
     }
 
     .btn-edit {
@@ -330,7 +343,7 @@
       color: white;
       cursor: pointer;
       font-weight: 600;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       transition: opacity 0.3s;
     }
 
@@ -351,8 +364,8 @@
     }
 
     .view-field-label {
-      font-size: 0.85rem;
-      color: #9ca3af;
+      font-size: 0.813rem;
+      color: var(--text-secondary);
       text-transform: uppercase;
       letter-spacing: 0.5px;
       font-weight: 600;
@@ -360,8 +373,8 @@
     }
 
     .view-field-value {
-      color: #333;
-      font-size: 1rem;
+      color: var(--text-primary);
+      font-size: 0.938rem;
       line-height: 1.6;
       white-space: pre-wrap;
       word-wrap: break-word;
@@ -369,7 +382,7 @@
     }
 
     .view-field-value.empty {
-      color: var(--muted);
+      color: var(--text-secondary);
       font-style: italic;
     }
 
@@ -381,7 +394,8 @@
       display: block;
       margin-bottom: 8px;
       font-weight: 600;
-      color: #374151;
+      color: var(--text-primary);
+      font-size: 0.875rem;
     }
 
     .form-group input,
@@ -389,10 +403,12 @@
     .form-group select {
       width: 100%;
       padding: 10px 12px;
-      border: 1px solid #d1d5db;
+      border: 1px solid var(--border);
       border-radius: 8px;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       font-family: inherit;
+      background: var(--card);
+      color: var(--text-primary);
     }
 
     .form-group textarea {
@@ -409,12 +425,14 @@
     }
 
     .btn-cancel {
-      background: white;
-      border: 1px solid #d1d5db;
+      background: var(--card);
+      border: 1px solid var(--border);
       padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
+      color: var(--text-primary);
+      font-weight: 500;
     }
 
     .btn-save {
@@ -424,7 +442,7 @@
       padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       font-weight: 600;
     }
 
@@ -435,14 +453,14 @@
       padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       font-weight: 600;
     }
 
     .empty-state {
       text-align: center;
       padding: 60px 20px;
-      color: var(--muted);
+      color: var(--text-secondary);
       grid-column: 1 / -1;
     }
 
@@ -452,9 +470,10 @@
     }
 
     .empty-state h3 {
-      font-size: 1.3rem;
+      font-size: 1.125rem;
       margin-bottom: 10px;
-      color: #4b5563;
+      color: var(--text-primary);
+      font-weight: 600;
     }
 
     .save-indicator {
@@ -466,6 +485,7 @@
       padding: 12px 20px;
       border-radius: 8px;
       font-weight: 600;
+      font-size: 0.875rem;
       transform: translateY(-100px);
       transition: transform 0.3s;
       z-index: 1000;
