--- a/dashboard.html
+++ b/dashboard.html
@@ -423,7 +423,7 @@
   <div class="main">
     <div class="top-bar">
       <div class="welcome-text">
-        Welcome back, <span id="userEmail" style="color: var(--text-secondary); font-weight: 400;">Loading...</span>
+        Welcome back!
       </div>
     </div>
 
@@ -563,7 +563,7 @@
   }
 
   // Display user email
-  document.getElementById('userEmail').textContent = userEmail;
+ // document.getElementById('userEmail').textContent = userEmail;
 
   // ===================== API HELPERS =====================
   async function apiCall(endpoint, options = {}) {
@@ -730,3 +730,4 @@
   </script>
 </body>
 </html>
+
